--- a/package.json
+++ b/package.json
@@ -9,18 +9,16 @@
   "main": "src/index.js",
   "dependencies": {
     "@brixtol/currency-symbols": "0.1.2",
-    "@piotrgorecki/i18n-currency-name": "1.2.0",
-    "@shopify/react-i18n": "5.1.0",
+    "@cashmoney/core": "1.1.0",
     "countries-list": "2.5.6",
     "country-flag-icons": "1.2.5",
     "currency-codes": "2.1.0",
-    "dinero.js": "1.8.1",
-    "langmap": "0.0.16",
     "react": "16.13.1",
     "react-cookie": "4.0.3",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.3",
-    "react-select": "3.1.0"
+    "react-select": "3.1.0",
+    "react-switch": "5.0.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
